K8S/config_and_access_k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-myapp
  namespace: network-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-myapp
  template:
    metadata:
      labels:
        app: web-myapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - name: http-port
          containerPort: 1180
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: web-content
