K8S/config_and_access_k8s/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-myapp-svc
  namespace: network-k8s
spec:
  selector:
    app: web-myapp
  ports:
    - name: http  
      port: 80
      targetPort: 80
